--- a/thankyou.html
+++ b/thankyou.html
@@ -1,92 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Obrigado! | Intellih Tecnologia</title>
-  <meta name="description" content="Seu diagnóstico de automação foi enviado com sucesso! Baixe o e-book e agende sua consultoria gratuita com a Intellih.">
-  <link rel="icon" href="/favicon.ico" />
-
-  <!-- Meta Pixel Code -->
-  <script>
-    !(function(f,b,e,v,n,t,s){
-      if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-      n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src=v;s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)
-    })(window,document,'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1240394014783181'); // Seu Pixel
-    fbq('track', 'PageView');
-    fbq('track', 'Lead'); // Evento principal de conversão
-  </script>
-  <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=1240394014783181&ev=Lead&noscript=1"/></noscript>
-  <!-- End Meta Pixel -->
-
+  <link rel="icon" href="favicon.ico">
   <style>
-    :root {
-      --bg:#0a0a0a; --fg:#ffffff; --muted:#bfbfbf; --brand:#c44b04; --card:#121212; --stroke:#1e1e1e;
-    }
-    *{box-sizing:border-box;}
-    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--fg);}
-    .wrap{max-width:900px;margin:0 auto;padding:32px 24px;text-align:center;}
-    .card{background:var(--card);border:1px solid var(--stroke);border-radius:16px;padding:40px 30px;margin-top:48px;}
-    h1{font-size:clamp(26px,5vw,42px);margin-bottom:12px;}
-    p{color:var(--muted);font-size:17px;line-height:1.7;max-width:600px;margin:0 auto 20px;}
-    .btn{background:var(--brand);color:#fff;padding:14px 18px;border:none;border-radius:12px;font-weight:600;cursor:pointer;transition:.2s;margin:8px;text-decoration:none;display:inline-block;}
-    .btn:hover{filter:brightness(1.05);transform:translateY(-1px);}
-    .btn.alt{background:transparent;border:1px solid var(--stroke);}
-    .btn.whats{background:#25D366;color:#fff;}
-    footer{border-top:1px solid var(--stroke);margin-top:64px;padding:24px 0;color:var(--muted);font-size:14px;}
+    body{background:#0a0a0a;color:#fff;font-family:Segoe UI,Arial,sans-serif;text-align:center;padding:60px 20px;}
+    a.btn{background:#c44b04;color:#fff;text-decoration:none;padding:12px 18px;border-radius:10px;display:inline-block;margin-top:24px;}
   </style>
 </head>
 <body>
-
-  <main class="wrap">
-    <div class="card">
-      <img src="/favicon.ico" alt="Logo Intellih" style="width:64px;height:64px;margin-bottom:16px;"/>
-      <h1>Obrigado! 🎉</h1>
-      <p>Recebemos sua solicitação de <b>diagnóstico gratuito de automação</b>.</p>
-      <p>O e-book <i>“Automação Inteligente para Pequenos Negócios”</i> está pronto para baixar.</p>
-
-      <div style="margin-top:24px;">
-        <a href="/ebooks/ebook-automacao-inteligente.pdf" class="btn" download>📘 Baixar e-book</a>
-        <a href="https://www.intellih.com.br" target="_blank" class="btn alt">🌐 Visitar site Intellih</a>
-        <a href="/index.html" class="btn alt">⬅️ Voltar à página inicial</a>
-      </div>
-
-      <hr style="margin:40px auto;width:80%;border:0;border-top:1px solid var(--stroke);">
-
-      <h2 style="color:#fff;margin-bottom:8px;">💬 Quer acelerar seus resultados?</h2>
-      <p style="color:#ccc;margin-bottom:20px;">
-        Agende agora uma <b>consultoria gratuita com a Intellih</b> e descubra como aplicar automação inteligente no seu negócio.
-      </p>
-      <a id="btnWhats" 
-         href="https://wa.me/55995558808?text=Olá!%20Quero%20agendar%20minha%20consultoria%20de%20automação%20gratuita%20da%20Intellih." 
-         target="_blank" 
-         class="btn whats">💬 Falar com Especialista no WhatsApp</a>
-
-      <p style="margin-top:28px;font-size:15px;color:#ccc;">
-        Nossa equipe analisará seus dados e enviará o diagnóstico personalizado em breve.
-      </p>
-    </div>
-  </main>
-
-  <footer class="wrap">
-    © 2025 Intellih Tecnologia · <a href="#" style="color:var(--brand)">Política de Privacidade</a>
-  </footer>
-
-  <script>
-    // Dispara evento customizado adicional
-    fbq('trackCustom', 'ThankYouVisit', { page: 'thankyou' });
-
-    // Evento de clique no botão de consultoria (WhatsApp)
-    document.getElementById('btnWhats').addEventListener('click', function(){
-      fbq('trackCustom', 'ConsultoriaClick', { action: 'whatsapp' });
-    });
-  </script>
+  <h1>🎉 Obrigado!</h1>
+  <p>Recebemos suas informações. Nosso time entrará em contato com seu diagnóstico personalizado.</p>
+  <p>Se quiser, baixe novamente o e-book abaixo:</p>
+  <a href="ebooks/ebook-automacao-inteligente.pdf" class="btn" download>📘 Baixar e-book</a>
 </body>
 </html>
