--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </main>
 
   <script>
-    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/SEU_SCRIPT_ID/exec"; // substitua pelo URL do Apps Script
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxcizzMSUvBGj9FgmoxSrXqpl7_cPiZt8hXiadvep6m0pBM6oU_EfiwJR3NSbDeKgfn/exec/exec"; // substitua pelo URL do Apps Script
     const EBOOK_PATH = "ebooks/ebook-automacao-inteligente.pdf";
 
     const form = document.getElementById('leadForm');
@@ -80,3 +80,4 @@
   </script>
 </body>
 </html>
+
