--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
   <script>
     // ===== CONFIG =====
-    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/SEU_SCRIPT_ID/exec"; // troque pelo seu URL publicado
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxcizzMSUvBGj9FgmoxSrXqpl7_cPiZt8hXiadvep6m0pBM6oU_EfiwJR3NSbDeKgfn/exec/exec"; // troque pelo seu URL publicado
     const EBOOK_PATH = "ebooks/ebook-automacao-inteligente.pdf"; // o arquivo deve estar em /ebooks/
     // ==================
 
