--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   </footer>
 
   <script>
-    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbzSnzo8niT9E_T_ZVjxBXd25MfpSODVrjxYluyUb83nBxZZNYlP15-kOCPKm0fDu9U/exec/exec"; // troque pelo seu URL publicado
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwDwq2PAKtwIp6lOps4dU3lGOlx3MrLt2KfQwWrKsI04kFP2H6KHu25RRorgMTMASQm/exec"; // troque pelo seu URL publicado
     const EBOOK_PATH = "ebooks/ebook-automacao-inteligente.pdf";
     const THANKYOU_URL = "https://thankyou.intellih.com.br";
 
