--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   </footer>
 
   <script>
-    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbwDwq2PAKtwIp6lOps4dU3lGOlx3MrLt2KfQwWrKsI04kFP2H6KHu25RRorgMTMASQm/exec/exec"; // coloque o link do seu Web App
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxigIA9nmhVKfcg_svQ1SNFaGHEmUXmXZf7ZHC7H_TUS-4FewnOwPFiiIdWK4ZWV-Qz/exec/exec"; // coloque o link do seu Web App
     const EBOOK_PATH = "ebooks/ebook-automacao-inteligente.pdf";
     const THANKYOU_URL = "https://thankyou.intellih.com.br";
 
