--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <h2>Como funciona</h2>
     <div class="how">
       <div class="step"><b>1.</b> Preencha o formulário.</div>
-      <div class="step"><b>2.</b> Baixe o e-book automaticamente.</div>
-      <div class="step"><b>3.</b> Receba seu diagnóstico personalizado.</div>
+      <div class="step"><b>2.</b> Você será redirecionado para a página de obrigado.</div>
+      <div class="step"><b>3.</b> O download do e-book inicia automaticamente.</div>
     </div>
   </section>
 
@@ -121,7 +121,7 @@
           <label for="lgpd">Concordo em receber comunicações e com a <a href="#" target="_blank">política de privacidade</a>.</label>
         </div>
 
-        <button id="submitBtn" class="btn" type="submit" style="margin-top:16px">Enviar e baixar e-book</button>
+        <button id="submitBtn" class="btn" type="submit" style="margin-top:16px">Enviar e acessar e-book</button>
         <p id="msg" class="kicker" style="margin-top:10px"></p>
       </form>
     </div>
@@ -133,8 +133,7 @@
   </footer>
 
   <script>
-    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxigIA9nmhVKfcg_svQ1SNFaGHEmUXmXZf7ZHC7H_TUS-4FewnOwPFiiIdWK4ZWV-Qz/exec/exec"; // coloque o link do seu Web App
-    const EBOOK_PATH = "ebooks/ebook-automacao-inteligente.pdf";
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxigIA9nmhVKfcg_svQ1SNFaGHEmUXmXZf7ZHC7H_TUS-4FewnOwPFiiIdWK4ZWV-Qz/exec/exec"; // troque pelo seu Web App
     const THANKYOU_URL = "https://thankyou.intellih.com.br";
 
     const form = document.getElementById('leadForm');
@@ -164,16 +163,10 @@
           body: JSON.stringify(payload)
         });
 
-        // Baixa o e-book e redireciona
-        const a = document.createElement('a');
-        a.href = EBOOK_PATH;
-        a.download = "ebook-automacao-inteligente.pdf";
-        document.body.appendChild(a);
-        a.click();
-        a.remove();
-
-        msg.textContent = "✅ E-book baixando... redirecionando.";
-        setTimeout(() => window.location.href = THANKYOU_URL, 1500);
+        msg.textContent = "✅ Enviado! Redirecionando...";
+        setTimeout(() => {
+          window.location.href = THANKYOU_URL;
+        }, 800);
 
       } catch (err) {
         console.error("Erro ao enviar:", err);
