--- a/thankyou.html
+++ b/thankyou.html
@@ -6,72 +6,25 @@
   <title>Obrigado! | Intellih Tecnologia</title>
   <link rel="icon" href="/favicon.ico">
   <meta name="description" content="Obrigado por baixar o e-book Automação Inteligente. Sua solicitação de diagnóstico foi recebida pela Intellih Tecnologia.">
-
   <style>
-    :root {
-      --bg:#0a0a0a; --fg:#ffffff; --muted:#bfbfbf; --brand:#c44b04; --card:#121212; --stroke:#1e1e1e;
-    }
-    * { box-sizing:border-box; }
-    body {
-      margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Noto Sans", "Helvetica Neue", sans-serif;
-      background:var(--bg);
-      color:var(--fg);
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      min-height:100vh;
-      text-align:center;
-      padding:24px;
-    }
-    .box {
-      max-width:520px;
-      background:var(--card);
-      border:1px solid var(--stroke);
-      border-radius:16px;
-      padding:36px 28px;
-      box-shadow:0 4px 18px rgba(0,0,0,.25);
-      animation:fadeIn .8s ease;
-    }
-    @keyframes fadeIn {
-      from { opacity:0; transform:translateY(15px); }
-      to { opacity:1; transform:translateY(0); }
-    }
+    :root { --bg:#0a0a0a; --fg:#ffffff; --muted:#bfbfbf; --brand:#c44b04; --card:#121212; --stroke:#1e1e1e; }
+    body { margin:0; font-family:Segoe UI,Arial,sans-serif; background:var(--bg); color:var(--fg); display:flex; justify-content:center; align-items:center; min-height:100vh; text-align:center; padding:24px; }
+    .box { max-width:520px; background:var(--card); border:1px solid var(--stroke); border-radius:16px; padding:36px 28px; box-shadow:0 4px 18px rgba(0,0,0,.25); animation:fadeIn .8s ease; }
+    @keyframes fadeIn { from { opacity:0; transform:translateY(15px); } to { opacity:1; transform:translateY(0); } }
     h1 { color:#fff; font-size:2rem; margin-bottom:10px; }
     p { color:var(--muted); line-height:1.6; margin-bottom:22px; }
-    .btn {
-      background:var(--brand);
-      color:#fff;
-      padding:14px 20px;
-      border-radius:10px;
-      text-decoration:none;
-      display:inline-block;
-      font-weight:600;
-      margin:8px;
-      transition:.2s;
-    }
+    .btn { background:var(--brand); color:#fff; padding:14px 20px; border-radius:10px; text-decoration:none; display:inline-block; font-weight:600; margin:8px; transition:.2s; }
     .btn:hover { filter:brightness(1.08); transform:translateY(-1px); }
-    .btn.alt {
-      background:transparent;
-      border:1px solid var(--stroke);
-      color:#fff;
-    }
-    footer {
-      position:fixed;
-      bottom:12px;
-      width:100%;
-      text-align:center;
-      color:var(--muted);
-      font-size:13px;
-    }
+    .btn.alt { background:transparent; border:1px solid var(--stroke); color:#fff; }
+    footer { position:fixed; bottom:12px; width:100%; text-align:center; color:var(--muted); font-size:13px; }
     footer a { color:var(--brand); text-decoration:none; }
   </style>
 </head>
 <body>
   <main class="box">
     <h1>🎉 Obrigado!</h1>
-    <p>Recebemos suas informações e o seu pedido de diagnóstico gratuito foi registrado com sucesso.</p>
-    <p>Você pode baixar novamente o e-book abaixo ou voltar ao site principal:</p>
+    <p>Recebemos suas informações e o download do seu e-book começou automaticamente.</p>
+    <p>Você pode também clicar novamente abaixo ou voltar ao site principal:</p>
 
     <a href="ebooks/ebook-automacao-inteligente.pdf" class="btn" download>📘 Baixar e-book</a>
     <a href="https://automacao.intellih.com.br" class="btn alt">⬅️ Voltar ao site</a>
@@ -84,5 +37,17 @@
   <footer>
     © 2025 Intellih Tecnologia · <a href="#" target="_blank">Política de Privacidade</a>
   </footer>
+
+  <script>
+    // Dispara o download automaticamente após 1 segundo
+    setTimeout(() => {
+      const a = document.createElement('a');
+      a.href = "ebooks/ebook-automacao-inteligente.pdf";
+      a.download = "ebook-automacao-inteligente.pdf";
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+    }, 1000);
+  </script>
 </body>
 </html>
