--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
   <script>
     const APPS_SCRIPT_URL = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxigIA9nmhVKfcg_svQ1SNFaGHEmUXmXZf7ZHC7H_TUS-4FewnOwPFiiIdWK4ZWV-Qz/exec/exec"; // troque pelo seu Web App
-    const THANKYOU_URL = "https://thankyou.intellih.com.br";
+    const THANKYOU_URL = "thankyou.html"; // redirecionamento interno (ajuste mínimo)
 
     const form = document.getElementById('leadForm');
     const btn = document.getElementById('submitBtn');
