--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   </footer>
 
   <script>
-    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/SEU_SCRIPT_ID/exec";
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxigIA9nmhVKfcg_svQ1SNFaGHEmUXmXZf7ZHC7H_TUS-4FewnOwPFiiIdWK4ZWV-Qz/exec/exec";
     const THANKYOU_URL = "/thankyou.html"; // garante redirecionamento absoluto
 
     const form = document.getElementById('leadForm');
