--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   </footer>
 
   <script>
-    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/SEU_SCRIPT_ID/exec"; // Substitua pelo seu Apps Script
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxigIA9nmhVKfcg_svQ1SNFaGHEmUXmXZf7ZHC7H_TUS-4FewnOwPFiiIdWK4ZWV-Qz/exec/exec"; // Substitua pelo seu Apps Script
     const THANKYOU_URL = "/thankyou.html"; // Redirecionamento garantido
 
     const form = document.getElementById('leadForm');
