--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
   <script>
     // ===== CONFIG =====
-    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/SEU_SCRIPT_ID/exec"; // 🔗 substitua pelo link real publicado
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxYbWXqaa6Y6CdoA1c9BZv73dGBSCzFfMQYr23lz4ppRmSQnaE5STcgsga78uazWPUG/exec/exec"; // 🔗 substitua pelo link real publicado
     // ==================
 
     const form = document.getElementById('leadForm');
